; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-capability.c_show_capabilities.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-capability.c_show_capabilities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"Capabilities:%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @show_capabilities to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_capabilities() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i8*, align 8
  %3 = call i8* (...) @cap_get_proc()
  store i8* %3, i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = call i32 @assert_se(i8* %4)
  %6 = load i8*, i8** %1, align 8
  %7 = call i8* @cap_to_text(i8* %6, i32* null)
  store i8* %7, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @assert_se(i8* %8)
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @log_info(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %10)
  %12 = load i8*, i8** %1, align 8
  %13 = call i32 @cap_free(i8* %12)
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @cap_free(i8* %14)
  ret void
}

declare dso_local i8* @cap_get_proc(...) #1

declare dso_local i32 @assert_se(i8*) #1

declare dso_local i8* @cap_to_text(i8*, i32*) #1

declare dso_local i32 @log_info(i8*, i8*) #1

declare dso_local i32 @cap_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
